{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 20,
  "lineage": "705e861b-a73c-7963-d188-8b25c41fd38b",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351441645959:network-acl/acl-0361542411a671f72",
            "default_network_acl_id": "acl-0361542411a671f72",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0361542411a671f72",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "351441645959",
            "subnet_ids": [
              "subnet-01002abb8c59690d0",
              "subnet-03a0ae4b7b1354864",
              "subnet-05a9f5145bcd8f5c6",
              "subnet-0facac34afcb549d2"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-default",
              "Project": "JavaNetwork"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-default",
              "Project": "JavaNetwork"
            },
            "vpc_id": "vpc-089857ff1672ebffd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351441645959:route-table/rtb-0891a47f2bf701b67",
            "default_route_table_id": "rtb-0891a47f2bf701b67",
            "id": "rtb-0891a47f2bf701b67",
            "owner_id": "351441645959",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-default",
              "Project": "JavaNetwork"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-default",
              "Project": "JavaNetwork"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-089857ff1672ebffd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351441645959:security-group/sg-0f8a142ce243130f5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f8a142ce243130f5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "351441645959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-default",
              "Project": "JavaNetwork"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-default",
              "Project": "JavaNetwork"
            },
            "vpc_id": "vpc-089857ff1672ebffd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b5cce6b24017b408",
            "arn": "arn:aws:ec2:us-east-1:351441645959:elastic-ip/eipalloc-0b5cce6b24017b408",
            "domain": "vpc",
            "id": "eipalloc-0b5cce6b24017b408",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-211-159-139.compute-1.amazonaws.com",
            "public_ip": "54.211.159.139",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-us-east-1a",
              "Project": "JavaNetwork"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-us-east-1a",
              "Project": "JavaNetwork"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351441645959:internet-gateway/igw-076ed12ebd0e36ee4",
            "id": "igw-076ed12ebd0e36ee4",
            "owner_id": "351441645959",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Project": "JavaNetwork"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Project": "JavaNetwork"
            },
            "vpc_id": "vpc-089857ff1672ebffd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b5cce6b24017b408",
            "association_id": "eipassoc-00f0874d454a8df2b",
            "connectivity_type": "public",
            "id": "nat-03582d09fa469fbc5",
            "network_interface_id": "eni-09c5dae327a838747",
            "private_ip": "10.0.101.234",
            "public_ip": "54.211.159.139",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01002abb8c59690d0",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-us-east-1a",
              "Project": "JavaNetwork"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-us-east-1a",
              "Project": "JavaNetwork"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c451dc5da44625cd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03582d09fa469fbc5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c451dc5da44625cd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-076ed12ebd0e36ee4",
            "id": "r-rtb-0dff8b466cd90f9611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dff8b466cd90f961",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351441645959:route-table/rtb-0c451dc5da44625cd",
            "id": "rtb-0c451dc5da44625cd",
            "owner_id": "351441645959",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-private",
              "Project": "JavaNetwork"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-private",
              "Project": "JavaNetwork"
            },
            "timeouts": null,
            "vpc_id": "vpc-089857ff1672ebffd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351441645959:route-table/rtb-0dff8b466cd90f961",
            "id": "rtb-0dff8b466cd90f961",
            "owner_id": "351441645959",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public",
              "Project": "JavaNetwork"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-public",
              "Project": "JavaNetwork"
            },
            "timeouts": null,
            "vpc_id": "vpc-089857ff1672ebffd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09708d953c75a530a",
            "route_table_id": "rtb-0c451dc5da44625cd",
            "subnet_id": "subnet-03a0ae4b7b1354864"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0752291752b0e4a43",
            "route_table_id": "rtb-0c451dc5da44625cd",
            "subnet_id": "subnet-05a9f5145bcd8f5c6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a589890685dd24c3",
            "route_table_id": "rtb-0dff8b466cd90f961",
            "subnet_id": "subnet-01002abb8c59690d0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a1e363994328769",
            "route_table_id": "rtb-0dff8b466cd90f961",
            "subnet_id": "subnet-0facac34afcb549d2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351441645959:subnet/subnet-03a0ae4b7b1354864",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a0ae4b7b1354864",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351441645959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-private-us-east-1a",
              "Project": "JavaNetwork"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-private-us-east-1a",
              "Project": "JavaNetwork"
            },
            "vpc_id": "vpc-089857ff1672ebffd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351441645959:subnet/subnet-05a9f5145bcd8f5c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a9f5145bcd8f5c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351441645959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-private-us-east-1b",
              "Project": "JavaNetwork"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-private-us-east-1b",
              "Project": "JavaNetwork"
            },
            "vpc_id": "vpc-089857ff1672ebffd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351441645959:subnet/subnet-01002abb8c59690d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01002abb8c59690d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351441645959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public-us-east-1a",
              "Project": "JavaNetwork"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-public-us-east-1a",
              "Project": "JavaNetwork"
            },
            "vpc_id": "vpc-089857ff1672ebffd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351441645959:subnet/subnet-0facac34afcb549d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0facac34afcb549d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351441645959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public-us-east-1b",
              "Project": "JavaNetwork"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-public-us-east-1b",
              "Project": "JavaNetwork"
            },
            "vpc_id": "vpc-089857ff1672ebffd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351441645959:vpc/vpc-089857ff1672ebffd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0361542411a671f72",
            "default_route_table_id": "rtb-0891a47f2bf701b67",
            "default_security_group_id": "sg-0f8a142ce243130f5",
            "dhcp_options_id": "dopt-37ca3f4d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-089857ff1672ebffd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0891a47f2bf701b67",
            "owner_id": "351441645959",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Project": "JavaNetwork"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Project": "JavaNetwork"
            }
          }
        }
      ]
    }
  ]
}